updating dates with momentjs

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-    "short_name": "Customer Data",
+    "short_name": "Paymerang - Payments",
     "name": "Coding Challenge for a Company",
     "start_url": ".",
     "display": "standalone",
