updated for portfolio site

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-    "short_name": "Paymerang - Payments",
-    "name": "Coding Challenge for a Company",
+    "short_name": "UI Challenge",
+    "name": "UI for a Payment Processing Company",
     "start_url": ".",
     "display": "standalone",
     "theme_color": "#000000",
