updating readme to include url to working example

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-    "homepage": "https://rches.github.io/technical_paymerang",
-    "name": "technical_paymerang",
+    "homepage": "https://rches.github.io/transaction_ui_exercise",
+    "name": "transaction_ui_exercise",
     "version": "0.1.0",
-    "private": true,
+    "private": false,
     "dependencies": {
         "@testing-library/jest-dom": "^4.2.4",
         "@testing-library/react": "^9.4.0",
